Fix: Update to DateTime 0.0.11 to address alignment issue inside a position:absolute element
CT-790

Sync to source repo @149ee0684483c7bc16ea753f1bcc7a71f3fa7119

--- a/css/searchBuilder.jqueryui.css
+++ b/css/searchBuilder.jqueryui.css
@@ -86,6 +86,10 @@ div.dt-datetime {
   padding: 0 20px 6px 20px;
   width: 275px;
 }
+div.dt-datetime.inline {
+  position: relative;
+  box-shadow: none;
+}
 div.dt-datetime div.dt-datetime-title {
   text-align: center;
   padding: 5px 0px 3px;
